2009-09-01  Jie Zhang  <jie.zhang@analog.com>

	2007-09-28  Bernd Schmidt  <bernd.schmidt@analog.com>
	* config/tc-bfin.c (bfin_fix_adjustable): Partially revert the
	2007-08-23 change; BFD_RELOC_BFIN_GOT is not adjustable.

	2007-08-23  Jie Zhang  <jie.zhang@analog.com>
	* config/tc-bfin.c (bfin_fix_adjustable): Adjust
	BFD_RELOC_BFIN_GOT, BFD_RELOC_BFIN_GOT17M4 and
	BFD_RELOC_BFIN_FUNCDESC_GOT17M4.

2009-09-01  Jie Zhang  <jie.zhang@analog.com>

	* read.c (TC_START_LABEL): Add a new argument.
	(read_a_source_file): Pass the beginning of the symbol through
	the new argument of TC_START_LABEL.
	* config/tc-arm.h (TC_START_LABEL): Add a new argument.
	* config/tc-bfin.c (bfin_start_label): Only search '(' and '['
	from the beginning of the symbol.
	* config/tc-bfin.h (TC_START_LABEL): Add the new argument.
	* config/tc-d30v.h (TC_START_LABEL): Likewise.
	* config/tc-fr30.h (TC_START_LABEL): Likewise.
	* config/tc-m32c.h (TC_START_LABEL): Likewise.
	* config/tc-m32r.h (TC_START_LABEL): Likewise.
	* config/tc-mep.h (TC_START_LABEL): Likewise.

2009-08-31  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/10570
	* write.c (write_object_file): Revert the accidental change
	made in revision 1.124 on 2009-08-17.

2009-08-31  Jan Beulich  <jbeulich@novell.com>

	* config/obj-elf.c (obj_elf_change_section): Set default type
	by calling bfd_elf_get_default_section_type.

2009-08-31  Jie Zhang  <jie.zhang@analog.com>

	* config/bfin-aux.h: Change format from DOS to UNIX.

2009-08-29  Martin Thuresson  <martin@mtme.org>

	* config/tc-arm.c (struct asm_cond, struct asm_psr, struct
	asm_barrier_opt): Change member template to
	template_name. (md_begin): Update code to reflect new member
	names.
	* config/tc-i386.c (struct templates, struct _i386_insn)
	(match_template, cpu_flags_match, match_reg_size, match_mem_size)
	(operand_size_match, md_begin, i386_print_statistics, pi)
	(build_vex_prefix, md_assemble, parse_insn, optimize_imm)